test my first script

--- a/index.html
+++ b/index.html
@@ -91,5 +91,8 @@
       <div class="container">&copy Secret Agent Suply Inc.</div>
     </footer>
 
+    <!-- testing my first script -->
+    <!-- <script src="./resources/scripts/main.js"></script> -->
+
   </body>
 </html>
